# demeter

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Pipfile  README.md  import.bash  import.py  import_amex.bash  import_amex.py  pyproject.toml  requirements.txt  visa_enrol.bash  visa_enrol.py
demeter/: amex.py
tests/: conftest.py  test_download.py  test_upload.py
