[tool.poetry]
name = "demeter"
version = "2.0.0"
description = "AMEX SFTP file management"
authors = ["Terry Cain <tcain@bink.com>"]

[tool.poetry.dependencies]
python = "^3.7"
paramiko = "*"
azure-storage-blob = "*"
APscheduler = "*"
pylogrus = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
docker = "*"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
